@@ -50,7 +50,7 @@ public class VariableManage {
 
     public static void addVariableV2(@NotNull String name, @NotNull Class<? extends BaseVariableV2> variableClass) {
         try {
-            BaseVariableV2 variable = variableClass.newInstance();
+            BaseVariableV2 variable = variableClass.getDeclaredConstructor().newInstance();
             VariableManage.VARIABLE_V2_CLASS.put(name, variable);
         } catch (Exception e) {
             RsNpcX.getInstance().getLogger().error("添加变量时出错", e);
